--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
-  "compilerOptions": {
+  "compilerOptions": { 
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
@@ -18,6 +18,7 @@
     "importHelpers": true,
     "target": "es2022",
     "module": "es2020",
+    "skipLibCheck": true,
     "lib": [
       "es2018", 
       "dom"
